--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,41 +1,43 @@
 <header class="header-section">
-<div>
-    <h1>ice cream made with</h1>
-    <h2>Passion</h2>
-    <button class="products-btn"></button>
-    <button class="about-btn"></button>
     <div>
-        <span>
+        <h1>ice cream made with</h1>
+        <h2>Passion</h2>
+        <button class="products-btn"></button>
+        <button class="about-btn"></button>
+        <div>
+            <span>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et
     </span>
-        <div>
-            <a href=""></a>
+            <div>
+                <a href=""></a>
+            </div>
         </div>
     </div>
-</div>
-<div class="ice-cream">
+    <div class="ice-cream">
 
-</div>
-<div>
-    <div>
-        <p>16</p>
-        <span>cafes</span>
     </div>
     <div>
-        <p>25</p>
-        <span>food trucks</span>
+        <div>
+            <p>16</p>
+            <span>cafes</span>
+        </div>
+        <div>
+            <p>25</p>
+            <span>food trucks</span>
+        </div>
     </div>
-</div>
     <div>
         <span>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et
     </span>
         <div>
-            <!-- <picture class="header-pics">
+            <picture class="header-pics">
+                <source srcset="./images/tablet/tabletHeroMilk.png 1x, ./images/tablet/tabletHeroMilk@2x.png 2x" media="(min-width:768px)" />
+                <source srcset="./images/desktop/desktopMilk.png 1x , ./images/desktop/desktopMilk@2x.png 2x" media="(min-width:1200px)" />
                 <img src="./images/desckslider-pic51.png" alt="кусшин молока">
-            </picture> -->
+            </picture>
             <span>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et
@@ -47,10 +49,10 @@
     </div>
     <div class="hero-png-box">
         <picture class="hero-png-box__img">
-            <!-- <source srcset="./images/mobslider-pic71.png 1x" media="(max-width:767.9px)" />
-            <source srcset="./images/tabletslider-pic71.png 1x" media="(min-width:768px)" /> -->
-            <!-- <source srcset="./images/desckslider-pic71.png 1x" media="(min-width:1200px)" />
-            <img src="./images/desckslider-pic71.png" alt="мороженого захотелось"> -->
+            <source srcset="./images/tablet/tabletHeroIce.png 1x, ./images/tablet/tabletHeroIce@2x.png 2x" media="(max-width:767.9px)" />
+            <source srcset="./images/tablet/tabletHeroPics.png 1x, ./images/tablet/tabletHeroPics@2x.png 2x" media="(min-width:768px)" />
+            <source srcset="./images/desktop/desktopIce.png 1x , ./images/desktop/desktopIce@2x.png 2x" media="(min-width:1200px)" />
+            <img src="./images/desckslider-pic71.png" alt="мороженого захотелось">
         </picture>
     </div>
     <div>
@@ -63,8 +65,10 @@
             <span>food trucks</span>
         </div>
 
-        <!-- <picture class="header-pics">
+        <picture class="header-pics">
+            <source srcset="./images/tablet/tabletHeroGirl.png 1x, ./images/tablet/tabletHeroGirl@2x.png 2x" media="(min-width:768px)" />
+            <source srcset="./images/desktop/desktopGirl.png 1x , ./images/desktop/desktopGirl@2x.png 2x" media="(min-width:1200px)" />
             <img src="./images/desckslider-pic41.png" alt="вкусное мороженое">
-        </picture> -->
+        </picture>
     </div>
 </header>
