--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -48,3 +48,56 @@
         display: block;
     }
 }
+
+// aaaaaaaaaaaaaaaaaa
+.header-sect {
+    background-color: #FFB8CA;
+}
+
+.ice-cream {
+    width: 345px;
+    height: 345px;
+    border-radius: 50%;
+    background-color: #FFA5BA;
+}
+
+.text-btn-head {
+    // temporarily
+    font-family: DM Sans;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 10px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+.products-btn {
+    width: 62px;
+    height: 24px;
+    border-radius: 20px;
+    background-color: #D41443;
+}
+
+.about-btn {
+    width: 82px;
+    height: 24px;
+    border-radius: 20px;
+    background-color: #FFFFFF;
+    color: #D41443;
+}
+
+.text-right {
+    display: none;
+    @media screen and (min-width: width 768px) {
+        display: block;
+    }
+}
+
+.header-pics {
+    display: none;
+    @media screen and(min-width: 768px) {
+        display: block;
+    }
+}
