добавил hover and id**

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,4 +1,4 @@
-<section class="section advantages-section">
+<section class="section advantages-section" id="advantages">
   <div class="container advantages-container">
     <div class="advantages-description">
       <p class="suptitle">старая традиционная школа</p>
