--- a/src/partials/footer-contacts.html
+++ b/src/partials/footer-contacts.html
@@ -1,4 +1,4 @@
-<div class="contacts-container">
+<div class="contacts-container" id="footer">
   <section class="right-booking-section section">
     <div class="container">
       <h2 class="title contacts-title">Онлайн-запись</h2>
