--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery section">
+<section class="gallery section" id="gallery">
   <div class="container">
     <h2 class="visually-hidden">Галерея</h2>
     <p class="suptitle gallery-suptitle">
