--- a/src/partials/prices.html
+++ b/src/partials/prices.html
@@ -1,4 +1,4 @@
-<section class="section price-section">
+<section class="section price-section" id="prices">
   <div class="container">
     <p class="suptitle dark-line">Проведи время в компании лучших мастеров</p>
     <h2 class="title dark-theme-title">Услуги и цены</h2>
