--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -33,3 +33,28 @@ ul {
   text-transform: uppercase;
   color: $text-color-chery;
 }
+
+.footer_contact-text {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 186%;
+  /* or 22px */
+
+  text-align: right;
+
+  color: #000000;
+}
+
+.footer_contact-num {
+  color: $text-button-chery;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 186%;
+  /* or 22px */
+
+  text-align: right;
+}
