--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,13 +6,13 @@
 
     <div class="footer_social-container">
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>github</li>
+            <li>telegram</li>
+            <li>facebook</li>
         </ul>
         <div class="footer_contact">
-            <span>Feel free to contact</span>
-            <a href="tell:+61 (0) 383 766 284">+61 (0) 383 766 284</a>
+            <span class="footer_contact-text">Feel free to contact</span>
+            <a class="footer_contact-num" href="tell:+61 (0) 383 766 284">+61 (0) 383 766 284</a>
         </div>
     </div>
 
