--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,3 +9,24 @@ $background-products-rose: #ffb8ca;
 $background-products-cofe: #f0d1a5;
 $background-products-green: #c2e297;
 $main-backround-rose: #fff5f6;
+
+body {
+  background-color: $bg-color-white;
+  color: $primary-text-color;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  min-width: 480px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+ul {
+  list-style: none;
+}
