--- a/src/sass/base/_base_styles.scss
+++ b/src/sass/base/_base_styles.scss
@@ -1,53 +1,90 @@
 body {
   font-family: 'DM Sans', 'Sans Serif';
   font-style: normal;
-    letter-spacing: 0.04em;
-    font-weight: 500;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  margin: 0;
+}
+
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.container {
+  margin: 0px auto;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     margin: 0;
-  
-   
   }
-  
-  .list {
-    padding: 0;
-    margin: 0;
-    list-style: none;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
   }
-  
-  .container {
-    margin: 0px auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    
-    
-    
-    @media screen and (min-width: 480px) {
-      width: 480px;
-    }
-  
-    @media screen and (min-width: 768px) {
-      width: 768px;
-    }
-  
-    @media screen and (min-width: 1280px) {
-      width: 1280px;
-    }
-  
-  
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+    padding-left: 34px;
+    padding-right: 34px;
   }
-  
-  a {
-    text-decoration: none;
+
+  @media screen and (min-width: 1280px) {
+    width: 1280px;
+    padding-left: 114px;
+    padding-right: 114px;
   }
-  
-  ul {
-    list-style-type: none;
-  }
-  
-  .visualy-hidden {
-    position: absolute;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-  }
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+img {
+  display: block;
+}
+
+// h2 titles
+.accent-title {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 58px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  color: #d41443;
+}
+
+//h3
+.subtitle {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 30px;
+  line-height: 1.13;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+
+.visualy-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
