Додає розмітку секцій advantages та gallery додає іконки в png форматі

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,1 +1,41 @@
-<p>Привіт всім!</p>
+<!--Прихований заголовок h2 Advantages-->
+<section class="section-advantages">
+    <div class="container">
+        <h2 class="section-title visually-hidden">Advantages</h2>
+        <ul class="advantages-list">
+            <li class="advantages-item">
+                <!-- <div class="advantages-list-icon">
+                    <svg width="33" height="50">
+                        <use href="./images/svg/sprite.svg#icon-antenna"></use>
+                    </svg>
+                </div> -->
+                <h3 class="advantages-list-title">721</h3>
+                <p class="advantages-list-content">
+                    Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+                </p>
+            </li>
+            <li class="advantages-list-item">
+                <!-- <div class="feature-list__icon">
+                    <svg width="50" height="50">
+                        <use href="./images/svg/sprite.svg#icon-clock"></use>
+                    </svg>
+                </div> -->
+                <h3 class="advantages-list-title">16kg</h3>
+                <p class="advantages-list-content">
+                    Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+                </p>
+            </li>
+            <li class="advantages-list-item">
+                <!-- <div class="advantages-list-icon">
+                    <svg width="44" height="50">
+                        <use href="./images/svg/sprite.svg#icon-diagram"></use>
+                    </svg>
+                </div> -->
+                <h3 class="advantages-list-title">84</h3>
+                <p class="advantages-list-content">
+                    Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
+                </p>
+            </li>
+        </ul>
+    </div>
+</section>
