--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -1,4 +1,4 @@
-<section class="section masters-section">
+<section class="section masters-section" id="masters">
   <div class="container masters-container">
     <p class="suptitle">для настоящих ценителей атмосферы</p>
     <h2 class="title masters-title">Наши мастера</h2>
