Добавляет footer-contacts

--- a/src/sass/components/_title.scss
+++ b/src/sass/components/_title.scss
@@ -16,8 +16,11 @@
 
   &.contacts-title {
     margin-bottom: 40px;
-    text-align: center;
     color: var(--white-color);
+
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
   }
 }
 
