--- a/src/sass/layout/_footer-contacts.scss
+++ b/src/sass/layout/_footer-contacts.scss
@@ -1,17 +1,42 @@
 .contacts-container {
   @media screen and (min-width: 1200px) {
+    width: 100%;
     display: flex;
-    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .title.contacts-title {
+    flex-basis: 100%;
   }
 }
 
 .right-booking-section {
   background-color: #191c26;
-  display: flex;
-  justify-content: flex-end;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-basis: 50%;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 50%;
+    display: flex;
+
+    padding-left: 56px;
+    padding-right: 40px;
+  }
 }
 
 .left-contacts-section {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-basis: 50%;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 50%;
+    padding-left: 100px;
+  }
+
   background-image: url(../img/footer/footer-mob.png),
     linear-gradient(to right, rgba(25, 28, 38, 1), rgba(25, 28, 38, 1));
   background-size: cover;
@@ -55,11 +80,20 @@
   }
 }
 
-// BOOKING FORM
-
-.booking-form {
-  max-width: 278px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .left-contacts-section > .booking-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
+
+@media screen and (min-width: 1200px) {
+  .container.booking-container {
+    padding: 0;
+  }
+}
+
+// BOOKING FORM
 
 .form-input {
   width: 100%;
@@ -125,7 +159,18 @@
 
 .adress-container {
   display: block;
-  margin-bottom: 44px;
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 44px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    max-width: 272px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 70px;
+  }
 }
 
 .adress-container-item {
@@ -144,6 +189,13 @@
   width: 24px;
   height: 24px;
   margin-right: 16px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .schedule-container {
+    align-items: center;
+    margin-left: auto;
+  }
 }
 
 .schedule-container-text {
