--- a/src/partials/footer-contacts.html
+++ b/src/partials/footer-contacts.html
@@ -1,6 +1,6 @@
 <div class="contacts-container">
   <section class="right-booking-section section">
-    <div class="container">
+    <div class="container booking-container">
       <h2 class="title contacts-title">Онлайн-запись</h2>
       <form action="" class="booking-form">
         <div class="booking-form-container">
@@ -31,7 +31,7 @@
   </section>
 
   <section class="left-contacts-section section">
-    <div class="container">
+    <div class="container booking-container">
       <h2 class="title contacts-title">Контакты</h2>
       <adress class="adress-container">
         <ul class="adress-container-list list">
