--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -8,24 +8,50 @@
       <p class="contact__text">
         Fusce ut velit laoreet, tempus arcu molestie vulputate
       </p>
+      <p class="workdays">Monday - Friday</p>
+      <p class="workhours">06:00 AM - 10:00 PM</p>
+      <p class="workdays">Saturday - Sunday</p>
+      <p class="workhours">08:00 AM - 16:00 PM</p>
+      <ul class="contacts-nav">
+        <li class="contacts-nav">
+          <a class="contacts-nav__phone" href="tel:+61(0) 383 766 284"
+            >+61(0) 383 766 284</a
+          >
+        </li>
+
+        <li class="contacts-nav">
+          <a class="contacts-nav__mail" href="mailto:noreply@envato.com"
+            >noreply@envato.com</a
+          >
+        </li>
+      </ul>
     </li>
+
     <li class="contacts__item">
       <div class="contacts-foodtrack">
         <p class="contacts__name">FOODTRUCK</p>
       </div>
-      <h1 class="contacts__city">Los Angeles</h1>
+      <h2 class="contacts__city">Los Angeles</h2>
       <p class="contact__text">
         Fusce ut velit laoreet, tempus arcu molestie vulputate
       </p>
+      <p class="workdays">Monday - Friday</p>
+      <p class="workhours">06:00 AM - 10:00 PM</p>
+      <p class="workdays">Saturday - Sunday</p>
+      <p class="workhours">08:00 AM - 16:00 PM</p>
     </li>
     <li class="contacts__item">
       <div class="contacts-cafe">
         <p class="contacts__name">CAFE</p>
       </div>
-      <h1 class="contacts__city">New York</h1>
+      <h2 class="contacts__city">New York</h2>
       <p class="contact__text">
         Fusce ut velit laoreet, tempus arcu molestie vulputate
       </p>
+      <p class="workdays">Monday - Friday</p>
+      <p class="workhours">06:00 AM - 10:00 PM</p>
+      <p class="workdays">Saturday - Sunday</p>
+      <p class="workhours">08:00 AM - 16:00 PM</p>
     </li>
   </ul>
 </section>
