--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -32,6 +32,7 @@
   text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
+  margin-bottom: 25px;
 }
 
 .contacts-foodtrack {
@@ -49,6 +50,7 @@
   text-align: center;
   letter-spacing: 0.04em;
   color: #ffffff;
+  margin-bottom: 25px;
 }
 
 .contacts__name {
@@ -62,12 +64,11 @@
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
-  line-height: 186%;
-  /* or 22px */
-
+  line-height: 22px;
   letter-spacing: 0.04em;
-
   color: #000000;
+  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .contact__text {
@@ -77,8 +78,56 @@
   font-size: 12px;
   line-height: 18px;
   color: #907e82;
+  margin: 0;
 
   &::after {
+    display: block;
+    content: '';
     border: 1px solid #e1e1e1;
+    position: absolute;
+    width: 179px;
+    height: 0px;
+    margin-top: 25px;
+    margin-bottom: 25px;
   }
+}
+
+.workdays {
+  display: block;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 22px;
+  color: #000000;
+  margin-top: 25px;
+}
+
+.workhours {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 22px;
+  color: #ffa5ba;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.contacts-nav__mail {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  color: #907e82;
+}
+
+.contacts-nav__phone {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  color: #907e82;
 }
