--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,14 +1,17 @@
 <header class="header-section">
     <div>
-        <h1>ice cream made with</h1>
-        <h2>Passion</h2>
-        <button class="products-btn"></button>
-        <button class="about-btn"></button>
+        <div class="hero-title">
+            <h1>ice cream made with</h1>
+            <h2>Passion</h2>
+            <button class="products-btn"></button>
+            <button class="about-btn"></button>
+        </div>
+
         <div>
             <span>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et
-    </span>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et
+            </span>
             <div>
                 <a href=""></a>
             </div>
