--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,8 +1,8 @@
 <header class="header-section">
     <div>
         <div class="hero-title">
-            <h1>ice cream made with</h1>
-            <h2>Passion</h2>
+            <h1>ice cream made with <span class="hero-title__larger">Passion</span> </h1>
+
             <button class="products-btn"></button>
             <button class="about-btn"></button>
         </div>
