--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -2,7 +2,7 @@
     background-color: #FFB8CA;
 }
 
-.hero-title h1 {
+.hero-title {
     font-family: Titan One;
     font-weight: normal;
     font-size: 26px;
@@ -18,22 +18,21 @@
         font-size: 38px;
         line-height: 44px;
     }
-}
-
-.hero-title h2 {
-    font-family: Titan One;
-    font-weight: normal;
-    font-size: 48px;
-    line-height: 96.5%;
-    text-transform: uppercase;
-    color: #D41443;
-    @media screen and(min-width: 768px) {
-        font-size: 34px;
-        line-height: 90.5%;
-    }
-    @media screen and(min-width: 1200px) {
-        font-size: 58px;
-        line-height: 90.5%;
+    &__larger {
+        font-family: Titan One;
+        font-weight: normal;
+        font-size: 48px;
+        line-height: 96.5%;
+        text-transform: uppercase;
+        color: #D41443;
+        @media screen and(min-width: 768px) {
+            font-size: 34px;
+            line-height: 90.5%;
+        }
+        @media screen and(min-width: 1200px) {
+            font-size: 58px;
+            line-height: 90.5%;
+        }
     }
 }
 
