--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -26,7 +26,6 @@
   .header-top {
     padding-top: 5px;
     width: 100%;
-    background-color: #000;
 
     & .contact-list-header {
       display: flex;
@@ -51,23 +50,20 @@
           &:hover {
             color: var(--accent-color);
 
-            & .icon-mail,
             & .icon-mail {
               stroke: var(--accent-color);
               fill: none;
             }
 
-            & .icon-tel,
             & .icon-tel {
               stroke: var(--accent-color);
               fill: none;
             }
           }
-
           & .icon-mail,
-          .icon-tel {
+          & .icon-tel {
             fill: none;
-            stroke: #9da4bd;
+            stroke: var(--white-color);
             margin-right: 10px;
           }
         }
