Полная разметка секции Advantages

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,3 +1,17 @@
 <section class="advantages">
     <h2 class="visually-hidden">advantages</h2>
+    <ul class="advantages-list">
+        <li class="advantages-item">
+            <h3 class="advantages-title">721</h3>
+            <p class="advantages-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </li>
+        <li class="advantages-item">
+            <h3 class="advantages-title">16kg</h3>
+            <p class="advantages-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </li>
+        <li class="advantages-item">
+            <h3 class="advantages-title">84</h3>
+            <p class="advantages-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+        </li>
+    </ul>
 </section>
