--- a/src/sass/utils/_slick-slider.scss
+++ b/src/sass/utils/_slick-slider.scss
@@ -14,29 +14,32 @@
             position: absolute;
             padding: 8px 0;
             width: 60px;
-            text-align: right;
+            font-size: 11px;
+            text-align: left;
+            color: var(--additional-text-color);
             bottom: 0;
             right: 0;
             z-index: 1;
             bottom: 40px;
-            right: 39px;
+            right: 200px;
             background-color: transparent;
             border: none;
-            border-bottom: 1px solid silver;
+            border-bottom: 1px solid var(--additional-text-color);
         }
         & .slick-next{
             position: absolute;
             padding: 8px 0;
             width: 60px;
-            text-align: left;
+            font-size: 11px;
+            text-align: right;
             bottom: 0;
             right: 34px;
             z-index: 1;
             bottom: 40px;
-            right: 125px;
+            right: 100px;
             background-color: transparent;
             border: none;
-            border-bottom: 1px solid silver;
+            border-bottom: 1px solid var(--additional-text-color);
             color: var(--additional-text-color);
 
             &::after{
@@ -48,8 +51,9 @@
         }
         & .slick-dots{
             position: absolute;
-            right: 39px;
+            right: 100px;
             top: 50%;
+            transform: translateY(-50%);
             list-style: none;
             z-index: 1;
             position: absolute;
