--- a/src/sass/layout/_page-header.scss
+++ b/src/sass/layout/_page-header.scss
@@ -26,6 +26,7 @@
   .header-top {
     padding-top: 5px;
     width: 100%;
+    background-color: #111319;
 
     & .contact-list-header {
       display: flex;
