Fix team section

--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -231,12 +231,12 @@
           />
           <img
             src="./images/team/mobile/team-mob3.jpg"
-            alt="фото Michele Doe"
+            alt="фото Alan Black"
             class="team-list-img"
           />
         </picture>
         <div class="team-list-content">
-          <h3 class="team-list-name" lang="en">Michele Doe</h3>
+          <h3 class="team-list-name" lang="en">Alan Black</h3>
           <p class="team-list-position" lang="en">Extreme Barber</p>
           <ul class="social-list list">
             <li class="social-list-item">
