--- a/src/sass/layout/_team.scss
+++ b/src/sass/layout/_team.scss
@@ -1,7 +1,7 @@
 .team-section {
   background: #f7f7f7;
   padding-top: 84px;
-  padding-bottom: 20px;
+  padding-bottom: 84px;
 }
 .team-section-suptitle {
   display: flex;
@@ -51,7 +51,6 @@
 .social-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 64px;
 }
 .social-list-link {
   display: flex;
@@ -67,12 +66,27 @@
     fill: var(--accent-color);
   }
 }
+.team-list-item:not(:last-child) {
+  margin-bottom: 64px;
+}
+
 .social-list-item:not(:last-child) {
   margin-right: 10px;
 }
 .social-list-icon {
   width: 20px;
   height: 20px;
+}
+@media screen and (min-width: 768px) {
+  .team-section {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .team-list-item:not(:last-child) {
+    margin-bottom: 64px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .team-list {
