стиль текста в хиро

--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -56,18 +56,60 @@
 }
 
 .text-box{
-
     position: absolute;
     z-index: 1;
     top: 50%;
     left: 120px;
     transform: translateY(-50%);
-    width: 355px;
     & .title{
         font-size: 16px;
         line-height: 26px;
         color: var(--white-color);
     
         letter-spacing: 0.02em;
+    }
+}
+@media screen and(min-width: 768px){
+    .text-box{
+        width: 355px;
+    }
+    .hero-title{
+        font-size: 48px;
+        color: var(--white-color);
+        margin-bottom: 20px;
+        font-family: "Raleway";
+    }
+    .suptitle{
+        color: rgba(157, 164, 189, 0.6);
+        
+        &::before{
+            background: rgba(157, 164, 189, 0.6);
+        }
+    }
+    .text{
+        font-size: 16px;
+        color: #9DA4BD;
+        line-height: 1.625;
+    }
+}
+@media screen and(min-width: 1200px){
+    .text-box{
+        width: 425px;
+    }
+    .hero-title{
+        font-size: 72px;
+        color: var(--white-color);
+        margin-bottom: 20px;
+        font-family: "Raleway";
+    }
+    .suptitle{
+        color: rgba(157, 164, 189, 0.6);
+        
+        &::before{
+            background: rgba(157, 164, 189, 0.6);
+        }
+    }
+    .text{
+        font-size: 18px;
     }
 }
