--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,6 +1,6 @@
 <header>
     <div>
-        <a href=""><img src="./logo 1.svg" alt=""></a>
+        <a href="">logo</a>
         <div>
             <nav>
                 <ul>
