add slider script

--- a/src/sass/layout/index/_section-slider.scss
+++ b/src/sass/layout/index/_section-slider.scss
@@ -20,7 +20,6 @@
 //   @include for-size(tablet) {
 //     width: 768px;
 //   }
-  
 
 // // для диапазона 768-1199рх
 // @include to-size(tablet, max-tablet) {
@@ -30,4 +29,30 @@
 //   @include for-size(desktop) {
 //     width: 1200px;
 //   }
+
 // }
+
+// .section-slider {
+
+// }
+.section-slider {
+  padding-top: 80px;
+  padding-bottom: 170px;
+}
+
+.slider-comment {
+  width: 280px;
+  height: 308px;
+  color: getColor('accent');
+  background-color: getColor('lightGrey-bg');
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.slider-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 12px;
+  line-height: 2.58;
+  color: getColor('mainText');
+}
