--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,16 +2,17 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
-@import './base/fonts';
+// @import './base/fonts';
 @import './base/colors';
+@import './utils/mixins';
 @import './components/container';
-@import './layout/header/header';
-@import './layout/header/section-hero';
-@import './layout/index/section-product';
-@import './layout/index/section-tradition';
-@import './layout/index/section-composition';
+// @import './layout/header/header';
+// @import './layout/header/section-hero';
+// @import './layout/index/section-product';
+// @import './layout/index/section-tradition';
+// @import './layout/index/section-composition';
 @import './layout/index/section-slider';
-@import './layout/index/section-location';
-@import './footer/index/section-contacts';
-@import '/footer/footer';
-@import './example';
+// @import './layout/index/section-location';
+// @import './footer/index/section-contacts';
+// @import '/footer/footer';
+// @import './example';
