--- a/src/sass/utils/_mixins.scss
+++ b/src/sass/utils/_mixins.scss
@@ -21,6 +21,17 @@
         }
     }  
 }
+@mixin flexbox($d: flex, $jc: center, $ai: center, $w: nowrap) {
+  display: $d;
+  justify-content: $jc;
+  align-items: $ai;
+  flex-wrap: $w;
+}
+@mixin font($fs, $lh, $fw: 500) {
+  font-size: $fs;
+  line-height: $lh;
+  font-weight: $fw;
+}
 
 // // Пример использования миксина медиазапросов
 // .my-box {
