--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -62,17 +62,18 @@
 
     &-wrapper {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
     &-left-side {
-      width: 50%;
-      margin-right: 30px;
+      width: calc((100% - 30px) / 2);
     }
     &-second-list {
-      width: 50%;
+      width: calc((100% - 30px) / 2);
     }
   }
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .about {
     &-item {
       &:not(:last-child) {
@@ -96,13 +97,14 @@
 
     &-list {
       display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
 
     &-item {
-      &:not(:last-child) {
-        margin-right: 30px;
-      }
+      width: calc((100% - 30px) / 2);
     }
+
     &-second-list {
       padding: 0 60px 0 34px;
     }
