base styles, variables added

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,4 @@
-@import './example';
+@import './base/normalize';
 @import './base/fonts';
-
+@import './utils/variables';
+@import './base/defaults';
