Додає стилі в секцію advantages

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,6 +1,6 @@
 <!--Прихований заголовок h2 Advantages-->
 <section class="section-advantages">
-    <div class="container">
+    <div class="container container-advantages">
         <h2 class="section-title visually-hidden">Advantages</h2>
         <ul class="advantages-list">
             <li class="advantages-item">
@@ -14,14 +14,14 @@
                     Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
                 </p>
             </li>
-            <li class="advantages-list-item">
+            <li class="advantages-item">
                 
                 <h3 class="advantages-list-title">16kg</h3>
                 <p class="advantages-list-content">
                     Aliquam ac dui vel dui vulputate consectetur. Mauris massa.
                 </p>
             </li>
-            <li class="advantages-list-item">
+            <li class="advantages-item">
                 <!-- <div class="advantages-list-icon">
                     <svg width="44" height="50">
                         <use href="./images/svg/sprite.svg#icon-diagram"></use>
