--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,55 +1,32 @@
 <header class="header-section">
     <div>
         <div class="hero-title">
-            <h1>ice cream made with <span class="hero-title__larger">Passion</span> </h1>
+            <h1 class="hero-title__mini">ice cream made with
+                <span class="hero-title__larger">Passion</span>
+            </h1>
 
-            <button class="products-btn"></button>
-            <button class="about-btn"></button>
+            <button class="products-btn">Products</button>
+            <button class="about-btn">How it’s made?</button>
         </div>
-
-        <div>
-            <span>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et
-            </span>
-            <div>
-                <a href=""></a>
-            </div>
-        </div>
-    </div>
-    <div class="ice-cream">
-
-    </div>
-    <div>
-        <div>
-            <p>16</p>
-            <span>cafes</span>
-        </div>
-        <div>
-            <p>25</p>
-            <span>food trucks</span>
-        </div>
-    </div>
-    <div>
-        <span>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-      tempor incididunt ut labore et
-    </span>
-        <div>
+        <!-- блок кувшина -->
+        <div class="header-info-box">
             <picture class="header-pics">
                 <source srcset="./images/tablet/tabletHeroMilk.png 1x , ./images/tablet/tabletHeroMilk@2x.png 2x" media="(min-width:768px)" />
                 <source srcset="./images/desktop/desktopMilk.png 1x , ./images/desktop/desktopMilk@2x.png 2x" media="(min-width:1200px)" />
                 <img src="./images/desktop/desktopMilk.png" alt="кусшин молока">
             </picture>
-            <span>
+            <span class="hero-text-about-milk">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et
             </span>
-            <div>
+            <div class="hero-want-mo-text">
                 <a href=""></a>
             </div>
         </div>
     </div>
+    <!-- центр героя -->
+
+
     <div class="hero-png-box">
         <picture class="hero-png-box__img">
             <source srcset="./images/mobile/mobHeroIce.png 1x , ./images/mobile/mobHeroIce@2x.png 2x" media="(max-width:767.9px)" />
@@ -58,16 +35,17 @@
             <img src="./images/desktop/desktopIce.png" alt="мороженого захотелось">
         </picture>
     </div>
-    <div>
-        <div class="text-right">
-            <p>16</p>
-            <span>cafes</span>
-        </div>
-        <div class="text-right">
-            <p>25</p>
-            <span>food trucks</span>
-        </div>
 
+    <!-- правая часть -->
+    <div class="header-info-box">
+        <div class="text-right">
+            <p class="amount-of-points">16</p>
+            <span class="amount-of-points__text">cafes</span>
+        </div>
+        <div class="text-right">
+            <p class="amount-of-points">25</p>
+            <span class="amount-of-points__text">food trucks</span>
+        </div>
         <picture class="header-pics">
             <source srcset="./images/tablet/tabletHeroGirl.png 1x , ./images/tablet/tabletHeroGirl@2x.png 2x" media="(min-width:768px)" />
             <source srcset="./images/desktop/desktopGirl.png 1x , ./images/desktop/desktopGirl@2x.png 2x" media="(min-width:1200px)" />
