--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,22 +1,37 @@
-.header-sect {
+.header-section {
+    z-index: 1;
+    position: relative;
+    overflow: hidden;
     background-color: #FFB8CA;
 }
 
 .hero-title {
-    font-family: Titan One;
-    font-weight: normal;
-    font-size: 26px;
-    line-height: 30px;
-    letter-spacing: 0.04em;
-    text-transform: uppercase;
-    color: #FFFFFF;
+    z-index: 5;
+    padding: 140px 0 160px;
+    width: 220px;
     @media screen and(min-width: 768px) {
-        font-size: 22px;
-        line-height: 25px;
+        width: 165px;
     }
     @media screen and(min-width: 1200px) {
-        font-size: 38px;
-        line-height: 44px;
+        width: 280px;
+    }
+    &__mini {
+        z-index: 3;
+        font-family: Titan One;
+        font-weight: normal;
+        font-size: 26px;
+        line-height: 30px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        @media screen and(min-width: 768px) {
+            font-size: 22px;
+            line-height: 25px;
+        }
+        @media screen and(min-width: 1200px) {
+            font-size: 38px;
+            line-height: 44px;
+        }
     }
     &__larger {
         font-family: Titan One;
@@ -36,11 +51,90 @@
     }
 }
 
-.ice-cream {
-    width: 345px;
-    height: 345px;
+.products-btn {
+    width: 62px;
+    height: 24px;
+    border-radius: 20px;
+    color: #FFFFFF;
+    background-color: #D41443;
+    font-family: DM Sans;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 10px;
+    text-align: center;
+    @media screen and(min-width: 1200px) {
+        width: 105px;
+        height: 40px;
+        font-size: 14px;
+        line-height: 18px;
+    }
+}
+
+.about-btn {
+    width: 82px;
+    height: 24px;
+    border-radius: 20px;
+    color: #D41443;
+    background-color: #FFFFFF;
+    font-family: DM Sans;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 10px;
+    text-align: center;
+    @media screen and(min-width: 1200px) {
+        width: 140px;
+        height: 40px;
+        font-size: 14px;
+        line-height: 18px;
+    }
+}
+
+.hero-text-about-milk {
+    font-family: DM Sans;
+    font-weight: normal;
+    font-size: 8px;
+    line-height: 150%;
+    color: #FFFFFF;
+    @media screen and (min-width: 768px) {
+        width: 115px;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 200px;
+    }
+}
+
+.hero-want-mo-text {
+    width: 26px;
+    height: 26px;
     border-radius: 50%;
-    background-color: #FFA5BA;
+    background-color: teal;
+}
+
+// .ice-cream
+.hero-png-box {
+    // position: absolute;
+    @media screen and(min-width: 768px) {
+        width: 325px;
+        height: 325px;
+    }
+    @media screen and(min-width: 1200px) {
+        width: 540px;
+        height: 540px;
+    }
+    &__img {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        &::after {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 345px;
+            height: 345px;
+            border-radius: 50%;
+            background-color: #000000;
+        }
+    }
 }
 
 .text-btn-head {
@@ -54,84 +148,39 @@
     color: #FFFFFF;
 }
 
-.products-btn {
-    width: 62px;
-    height: 24px;
-    border-radius: 20px;
-    background-color: #D41443;
-}
-
-.about-btn {
-    width: 82px;
-    height: 24px;
-    border-radius: 20px;
-    background-color: #FFFFFF;
-    color: #D41443;
-}
-
-.text-right {
-    display: none;
-    @media screen and (min-width: width 768px) {
-        display: block;
-    }
-}
-
-.header-pics {
+.header-info-box {
     display: none;
     @media screen and(min-width: 768px) {
         display: block;
     }
 }
 
-// aaaaaaaaaaaaaaaaaa
-.header-sect {
-    background-color: #FFB8CA;
-}
-
-.ice-cream {
-    width: 345px;
-    height: 345px;
-    border-radius: 50%;
-    background-color: #FFA5BA;
-}
-
-.text-btn-head {
-    // temporarily
-    font-family: DM Sans;
-    font-weight: normal;
-    font-size: 8px;
-    line-height: 10px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    color: #FFFFFF;
-}
-
-.products-btn {
-    width: 62px;
-    height: 24px;
-    border-radius: 20px;
-    background-color: #D41443;
-}
-
-.about-btn {
-    width: 82px;
-    height: 24px;
-    border-radius: 20px;
-    background-color: #FFFFFF;
-    color: #D41443;
-}
-
-.text-right {
-    display: none;
-    @media screen and (min-width: width 768px) {
-        display: block;
-    }
-}
-
-.header-pics {
-    display: none;
+// правый вверх
+.amount-of-points {
     @media screen and(min-width: 768px) {
-        display: block;
+        // text-align: right;
+        font-family: Titan One;
+        font-weight: normal;
+        font-size: 28px;
+        line-height: 32px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: #D41443;
+    }
+    @media screen and (min-width:1200px) {
+        font-size: 46px;
+        line-height: 53px;
+    }
+    &__text {
+        color: #FFFFFF;
+        font-family: DM Sans;
+        font-weight: normal;
+        font-size: 8px;
+        line-height: 10px;
+        text-align: center;
+        @media screen and(min-width: 1200px) {
+            font-size: 14px;
+            line-height: 18px;
+        }
     }
 }
