--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,12 +12,15 @@
         </ul>
         <div class="footer_contact">
             <span class="footer_contact-text">Feel free to contact</span>
-            <a class="footer_contact-num" href="tell:+61 (0) 383 766 284">+61 (0) 383 766 284</a>
+            <a class="footer_contact-num" href="tell:+61 (0) 383 766 284">
+                +61 (0) 383 766 284
+            </a>
         </div>
     </div>
-
+    
+    <div class="line"></div>
     <div class="footer_watermark-container">
-        <p>&#169; 2019 - IceCream.
+        <p class="footer_watermark-text">&#169; 2019 - IceCream.
         All Rights Reserved.</p>
     </div>
 
