--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -31,6 +31,12 @@ footer {
   color: $text-color-chery;
 }
 
+.footer_social-container {
+  margin-bottom: 43px;
+  text-align: right;
+  margin-right: 20px;
+}
+
 .footer_contact-text {
   font-family: DM Sans;
   font-style: normal;
@@ -54,4 +60,28 @@ footer {
   /* or 22px */
 
   text-align: right;
+}
+
+.footer_watermark-container {
+  margin: 0 auto;
+  width: 150px;
+}
+
+.footer_watermark-text {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 152%;
+  /* or 21px */
+
+  text-align: center;
+
+  color: #907e82;
+}
+
+.line {
+  margin-bottom: 20px;
+  width: 100%;
+  border-top: 1px solid #e1e1e1;
 }
